[package]
name = "rss-list"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre <dpbm136@gmail.com>"]
license = "MIT"
description = "List your rss feed using your terminal"
readme = "README.md"
homepage = "https://github.com/Dpbm/rss-list"
repository = "https://github.com/Dpbm/rss-list"
keywords = ["cli", "search", "rss", "list", "util", "feed", "rss-feed"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
colored = "2"
